fix: alertas y botones

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BROWSER=google-chrome
 HOST=0.0.0.0
 
-VITE_URI_SERVICE=https://prueba.com
+VITE_URI_SERVICE=http://localhost:3002
 VITE_API_SERVICE_VERSION=/api
