--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "sweetalert2": "^11.4.29",
     "yup": "^0.32.11"
   },
   "devDependencies": {
