feature: nueva funcionalidad

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BROWSER=google-chrome
 HOST=0.0.0.0
 
-VITE_URI_SERVICE=https://prueba.com
+VITE_URI_SERVICE=localhost:3001
 VITE_API_SERVICE_VERSION=/api
+VITE_CONFIG_SERVICE_VERSION=/config
